# health-metrics-service

./: .env.example  .gitignore  PRIVACY.md  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3ef8acaf4eec_v3_capture_tables.py  9abd8e07b339_regulation_overrides_table.py  (+6 more)
docs/: spec.md
docs/api/: manual-entry.md  (+2 more)
scripts/: calibrate_energy.py  fit_glycogen_params.py  recompute_unified_z.py  validate_water_retention.py  whoop_oauth_bootstrap.py
tests/: conftest.py  test_api_dashboard_grid.py  test_api_dashboard_today.py  test_api_manual_log.py  test_api_metric.py  test_api_workouts.py  test_chat_prompts.py  test_chat_prompts_v4.py  test_chat_route.py  test_chat_tools.py  test_chat_tools_goals.py  test_config.py  test_conftest_sanity.py  test_health.py  test_integration_brief_round_trip.py  test_jobs_daily_goal_recompute.py  test_jobs_daily_ingest.py  test_models_migration.py  test_narration.py  test_projection_habit.py  test_projection_hrv.py  test_projection_strength.py  test_projection_weight.py  test_recompute.py  test_recompute_unified_z.py  test_regulation.py  test_routes_activities.py  test_routes_auth.py  test_routes_body_composition.py  test_routes_goals.py  test_routes_health_events.py  test_routes_manual_entry.py  test_routes_meals.py  test_routes_meals_v1.py  test_routes_regulation_overrides.py  test_routes_session_brief.py  test_routes_weight_trend.py  test_routes_workout_sets.py  test_routes_workouts_history.py  test_routes_workouts_manual.py  (+7 more)
(+103 files in other folders)
