[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-metrics-service"
version = "0.1.0"
description = "Daily Oura + Whoop ingestion to Postgres for Hugo's auto-regulated training/nutrition planning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hugo Delgado", email = "hdelgad2@alumni.nd.edu" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.2",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/health_metrics"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
